--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/socket.io": "^3.0.1",
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
@@ -43,16 +42,18 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/module-alias": "^2.0.4",
     "@types/mongoose": "^5.11.96",
-    "@types/morgan": "^1.9.9",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.16.3",
+    "@types/socket.io": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
     "eslint": "^9.24.0",
