--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "types": ["node"],
+    "moduleResolution": "node",
     "outDir": "./dist",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
