--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["node"],
+    "types": ["node", "express"],
     "moduleResolution": "node",
     "outDir": "./dist",
     /* Visit https://aka.ms/tsconfig to read more about this file */
