--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/express-validator": "^3.0.2",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/module-alias": "^2.0.4",
