--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "outDir": "./dist",
     "target": "es2016",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node"],
+    "resolveJsonModule": true,
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }
   }
 }
