--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,8 @@
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "@types/node": "^22.16.3"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
