--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,6 @@
     "cron": "^4.3.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,8 +33,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
-    "socket.io": "^4.8.1"
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
